getting_started/test_files/semantic_errors/UndeclaredInNestedBlock.cpm
main(): int {
  {
    print(missing)
  }
  return 0
}
